--- a/ecom_site/shop/templates/shop/index.html
+++ b/ecom_site/shop/templates/shop/index.html
@@ -60,7 +60,7 @@
                 <div class="card">
                     <img src="{{ product.image }}" class="card-img-top" alt="">
                     <div class="card-body">
-                        <div class="card-title">
+                        <div id="nm{{ product.id }}" class="card-title">
                             {{ product.title }}
                         </div>
                         <div class="card-text">
@@ -126,10 +126,24 @@
 
 
     });
-    $(function () {
-  $('[data-toggle="popover"]').popover();
-  document.getElementById('cart').setAttribute('data-content', '<h5>this is your cart</h5>');
-})
+
+    DisplayCart(cart);
+    function DisplayCart(cart){
+        var cartString = "";
+        cartString += "<h5>this is your cart</h5><br>";
+        var cartIndex = 1;
+        for(var x in cart){
+            cartString += cartIndex;
+            cartString += document.getElementById('nm'+x).innerHTML + "Qty" + cart[x] + "</br>";
+            cartIndex += 1;
+        }
+        document.getElementById('cart').setAttribute('data-content', cartString);
+        $('[data-toggle="popover"]').popover();
+    }
+    
+
+
+
 </script>
 </html>
 
