--- a/ecom_site/shop/templates/shop/index.html
+++ b/ecom_site/shop/templates/shop/index.html
@@ -60,12 +60,8 @@
                 <div class="card">
                     <img src="{{ product.image }}" class="card-img-top" alt="">
                     <div class="card-body">
-                        <div id="nm{{ product.id }}" class="card-title">
-                            {{ product.title }}
-                        </div>
-                        <div class="card-text">
-                            $ {{ product.price }}
-                        </div>
+                        <div id="nm{{ product.id }}" class="card-title">{{ product.title }}</div>
+                        <div id="price{{ product.id }}" class="card-text">{{ product.price }}</div>
 
                         <a href="/{{ product.id }}" class="btn btn-warning">View</a>
                         <button id="{{ product.id }}" class="btn atc btn-warning">Add to cart</button>
@@ -115,10 +111,17 @@
         console.log(item_id);
 
         if (cart[item_id] !== undefined){
-            cart[item_id] = cart[item_id] + 1;
+            quantity = cart[item_id][0] + 1;
+            cart[item_id][0] = quantity;
+            cart[item_id][2] = cart[item_id][2] + parseFloat(document.getElementById("price"+item_id).innerHTML);
+
         }
         else {
-            cart[item_id] = 1;
+            quantity = 1;
+            price = parseFloat(document.getElementById("price"+item_id).innerHTML)
+            name = document.getElementById('nm'+item_id).innerHTML;
+            cart[item_id] = [quantity, name, price];
+
         }
         console.log(cart);
         localStorage.setItem('cart', JSON.stringify(cart));
@@ -132,11 +135,15 @@
         var cartString = "";
         cartString += "<h5>this is your cart</h5><br>";
         var cartIndex = 1;
-        for(var x in cart){
-            cartString += cartIndex;
-            cartString += document.getElementById('nm'+x).innerHTML + "Qty" + cart[x] + "</br>";
-            cartIndex += 1;
+        let cartObject = JSON.parse(localStorage.getItem('cart'))
+
+        for(item in cartObject){
+            console.log(cartObject[0])
+            console.log(cartObject[1])
+            cartString += cartObject[item][1] + " Qty: " + cartObject[item][0] + "</br>"
         }
+
+        cartString += "<a href='/checkout'><button class='btn btn-warning' id='checkout'>Checkout</button></a>";
         document.getElementById('cart').setAttribute('data-content', cartString);
         $('[data-toggle="popover"]').popover();
     }
