--- a/to_do_list/my_app/templates/my_app/index.html
+++ b/to_do_list/my_app/templates/my_app/index.html
@@ -1,27 +1,56 @@
 {% extends 'my_app/base.html'%} {% block body %}
-<form method="POST" class="shadow p-3">
-	{% csrf_token %}
-	<div class="form-group m-3">
-		<input
-			type="text"
-			class="form-control"
-			name="name"
-			id="name"
-			placeholder="Enter Task"
-		/>
-	</div>
-	<div class="form-group m-3">
-		<input
-			type="text"
-			class="form-control"
-			name="priority"
-			id="priority"
-			placeholder="Enter Task Priority"
-		/>
-	</div>
-	<input type="submit" class="btn btn-success m-3" />
-</form>
 
-{% for task in task_list %} {{ task.name }} --> {{ task.priority }}
-<br />
-{% endfor %} {% endblock %}
+<div class="container-fluid">
+	<div class="row">
+		<div class="col-md-12">
+			<div class="banner">
+				<div class="banner-text">
+					<h1>To Do</h1>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+
+<div class="row">
+	<div class="col-md-6">
+		<h4 class="m-3">Add Task</h4>
+		<form method="POST" class="shadow p-3">
+			{% csrf_token %}
+			<div class="form-group m-3">
+				<input
+					type="text"
+					class="form-control"
+					name="name"
+					id="name"
+					placeholder="Enter Task"
+				/>
+			</div>
+			<div class="form-group m-3">
+				<input
+					type="text"
+					class="form-control"
+					name="priority"
+					id="priority"
+					placeholder="Enter Task Priority"
+				/>
+			</div>
+			<input type="submit" class="btn btn-success m-3" />
+		</form>
+	</div>
+
+	<div class="col-md-6">
+		<h4>Tasks to be completed</h4>
+		{% for task in task_list %}
+		<div class="card shadow">
+			<div class="card-body">
+				<h5 class="card-title">{{ task.name }}</h5>
+				<p><b>{{ task.priority }}</b></p>
+				<a class="btn btn-danger" href="">Done</a>
+			</div>
+		</div>
+        <br>
+		{% endfor %}
+	</div>
+</div>
+{% endblock %}
