add delete functionality

--- a/to_do_list/my_app/templates/my_app/index.html
+++ b/to_do_list/my_app/templates/my_app/index.html
@@ -46,7 +46,7 @@
 			<div class="card-body">
 				<h5 class="card-title">{{ task.name }}</h5>
 				<p><b>{{ task.priority }}</b></p>
-				<a class="btn btn-danger" href="">Done</a>
+				<a class="btn btn-danger" href="{% url 'delete' task.id %}">Done</a>
 			</div>
 		</div>
         <br>
