--- a/to_do_list/my_app/templates/my_app/index.html
+++ b/to_do_list/my_app/templates/my_app/index.html
@@ -55,7 +55,10 @@
 				<h5 class="card-title">{{ task.name }}</h5>
 				<p><b>{{ task.priority }}</b></p>
 				<p><b>{{ task.date }}</b></p>
+
 				<a class="btn btn-danger" href="{% url 'delete' task.id %}">Done</a>
+				<a class="btn btn-success" href="{% url 'update' task.id %}">Update</a>
+
 			</div>
 		</div>
         <br>
