--- a/to_do_list/my_app/templates/my_app/update.html
+++ b/to_do_list/my_app/templates/my_app/update.html
@@ -7,20 +7,15 @@
         <div class="col-md-6">
             <div class="card shadow-sm border-0 rounded-lg" style="background: rgba(255,255,255,0.9);">
                 <div class="card-header bg-primary text-white rounded-top">
-                    <h4 class="mb-0"><i class="fas fa-pen me-2"></i>Edit Form</h4>
+                    <h4 class="mb-0"><i class="fas fa-edit me-2"></i>Task Update</h4>
                 </div>
                 <div class="card-body">
                     <form method="POST">
                         {% csrf_token %}
                         {{ form.as_p }}
-                        <div class="d-flex justify-content-between">
-                            <button type="submit" class="btn btn-primary btn-lg rounded-pill mt-3">
-                                <i class="fas fa-paper-plane me-2"></i><b>Apply</b>
-                            </button>
-                            <a href="{% url 'index' %}" class="btn btn-secondary btn-lg rounded-pill mt-3">
-                                <i class="fas fa-times me-2"></i>Cancel
-                            </a>
-                        </div>
+                        <button type="submit" class="btn btn-primary btn-lg w-100 rounded-pill mt-3">
+                            <i class="fas fa-save me-2"></i>Update
+                        </button>                     
                     </form>
                 </div>
             </div>
